package usecases;

public interface ServicioAutenticacion {
    boolean autenticar(String usuario, String password);
}
