package usecases;

public interface ServicioNotificacion {
    void enviar(String destinatario, String mensaje);
}
